--- a/index.html
+++ b/index.html
@@ -12,6 +12,22 @@
             padding: 0;
             background-color: #f4f4f4;
         }
+        .menu {
+            background-color: #333;
+            overflow: hidden;
+            display: flex;
+            justify-content: center;
+            padding: 10px 0;
+        }
+        .menu a {
+            color: white;
+            padding: 14px 20px;
+            text-decoration: none;
+            text-align: center;
+        }
+        .menu a:hover {
+            background-color: #575757;
+        }
         header {
             background-image: url('your-image.jpg');
             background-size: cover;
@@ -59,15 +75,23 @@
 </head>
 <body>
 
+<div class="menu">
+    <a href="#apie">Apie</a>
+    <a href="#paslaugos">Paslaugos</a>
+    <a href="#atsiliepimai">Atsiliepimai</a>
+    <a href="#kontaktai">Kontaktai</a>
+</div>
+
 <header>
     <h1>Masažas Klaipėda: Profesionalūs, atpalaiduojantys ir sportiniai masažai</h1>
     <button onclick="window.location.href='https://judesio.lt'">Užsisakyti masažą</button>
 </header>
 
 <div class="content">
-    <h2>Apie masažus</h2>
+    <h2 id="apie">Apie masažus</h2>
     <p>Masažai yra ne tik puikus būdas atsipalaiduoti, bet ir gerinti bendrą savijautą, mažinti stresą ir įtampą.</p>
 
+    <h2 id="paslaugos">Mūsų paslaugos</h2>
     <div class="service">
         <div>
             <h3>Sportinis masažas</h3>
@@ -83,14 +107,14 @@
         </div>
     </div>
 
-    <h2>Atsiliepimai</h2>
+    <h2 id="atsiliepimai">Atsiliepimai</h2>
     <p>„Puikus masažas! Jaučiuosi visiškai atsigavęs.“ – Tomas</p>
     <p>„Rekomenduoju! Masažo meistras labai profesionalus.“ – Laura</p>
 
     <button onclick="window.location.href='https://judesio.lt'">Apsilankykite mūsų svetainėje</button>
 </div>
 
-<footer>
+<footer id="kontaktai">
     <p>Kontaktai: +370 600 00000 | info@masazai-klaipeda.lt</p>
     <p>Sekite mus: Facebook, Instagram</p>
 </footer>
