--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 <body>
 
 <div class="menu">
-    <a href="#apie">Apie</a>
+    <a href="apie.html">Apie</a>
     <a href="#paslaugos">Paslaugos</a>
     <a href="#atsiliepimai">Atsiliepimai</a>
     <a href="#kontaktai">Kontaktai</a>
