--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
 
 <div class="menu">
     <a href="apie.html">Apie</a>
-    <a href="#paslaugos">Paslaugos</a>
-    <a href="#atsiliepimai">Atsiliepimai</a>
-    <a href="#kontaktai">Kontaktai</a>
+    <a href="paslaugos.html">Paslaugos</a>
+    <a href="atsiliepimai.html">Atsiliepimai</a>
+    <a href="kontaktai.html">Kontaktai</a>
 </div>
 
 <header>
