--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
 
+    <div id="menu-container"></div> <!-- The menu will be loaded here -->
+
     <header>
         <h1>Masažas Klaipėda: Profesionalūs, atpalaiduojantys ir sportiniai masažai</h1>
         <button onclick="window.location.href='https://judesio.lt'">Užsisakyti masažą</button>
@@ -24,6 +26,6 @@
         <p>Sekite mus: Facebook, Instagram</p>
     </footer>
 
-    <script src="menu.js"></script> <!-- Loads menu dynamically -->
+    <script src="menu.js"></script> <!--  Loads menu dynamically -->
 </body>
 </html>
