--- a/index.html
+++ b/index.html
@@ -3,30 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <script src="menu.js"></script> <!--  Loads menu dynamically -->
     <meta name="description" content="Masažas Klaipėda - profesionalūs, atpalaiduojantys ir sportiniai masažai">
     <title>Masažas Klaipėda</title>
+    <link rel="stylesheet" href="menu.css"> <!-- Link to the menu.css for styling -->
 </head>
 <body>
 
-    <div id="menu-container"></div> <!-- The menu will be loaded here -->
+    <!-- This is where the menu will be loaded -->
+    <div id="menu-container"></div>
 
-    <header>
-        <h1>Masažas Klaipėda: Profesionalūs, atpalaiduojantys ir sportiniai masažai</h1>
-        <button onclick="window.location.href='https://judesio.lt'">Užsisakyti masažą</button>
-    </header>
+    <!-- JavaScript to dynamically load the menu -->
+    <script src="menu.js"></script>
 
-    <div class="content">
-        <h2 id="apie">Apie masažus</h2>
-        <p>Masažai yra ne tik puikus būdas atsipalaiduoti, bet ir gerinti bendrą savijautą, mažinti stresą ir įtampą.</p>
-    </div>
-
-    <footer id="kontaktai">
-        <p>Kontaktai: +370 600 00000 | info@masazai-klaipeda.lt</p>
-        <p>Sekite mus: Facebook, Instagram</p>
-    </footer>
-
-    
 </body>
 </html>
