--- a/menu.html
+++ b/menu.html
@@ -1,7 +1,34 @@
 <div class="menu">
     <a href="index.html">Pagrindinis</a>
-    <a href="apie.html">Apie</a>
-    <a href="paslaugos.html">Paslaugos</a>
-    <a href="atsiliepimai.html">Atsiliepimai</a>
-    <a href="kontaktai.html">Kontaktai</a>
+    <a href="about.html">Apie</a>
+    <a href="services.html">Paslaugos</a>
+    <a href="contact.html">Kontaktai</a>
 </div>
+
+<style>
+    .menu {
+        background-color: #333;
+        overflow: hidden;
+        display: flex;
+        justify-content: center;
+        padding: 10px 0;
+    }
+
+    .menu a {
+        color: white;
+        padding: 14px 20px;
+        text-decoration: none;
+        text-align: center;
+    }
+
+    .menu a:hover {
+        background-color: #575757;
+    }
+</style>
+
+<script>
+    // Additional JavaScript to enhance the menu behavior (e.g., toggle or animation)
+    document.addEventListener("DOMContentLoaded", function() {
+        console.log("Menu loaded successfully!");
+    });
+</script>
