--- a/index.html
+++ b/index.html
@@ -64,6 +64,12 @@
             margin-bottom: 20px;
         }
 
+        /* Image styles */
+        .hero-image {
+            width: 100%;
+            height: auto;
+        }
+
         /* Button Styles */
         button {
             padding: 10px 20px;
@@ -81,6 +87,12 @@
 
 </head>
 <body>
+
+    <!-- Top Hero Image, different for mobile and desktop -->
+    <picture>
+        <source srcset="images/masazas-klaipeda-2.jpg" media="(max-width: 768px)">
+        <img src="images/masazas-klaipeda-1.jpg" alt="Masažas Klaipėda" class="hero-image">
+    </picture>
 
     <!-- The menu section -->
     <div class="menu">
