--- a/index.html
+++ b/index.html
@@ -52,6 +52,17 @@
                 padding: 12px 20px;
                 border-top: 1px solid #444;
             }
+
+            .hero-image {
+                width: 100%;
+            }
+        }
+
+        /* Image styles for desktop */
+        .hero-image {
+            width: 50%; /* Fit the image to 50% of the screen */
+            height: auto;
+            object-fit: cover;
         }
 
         /* Content Section */
@@ -62,12 +73,6 @@
 
         .content h1 {
             margin-bottom: 20px;
-        }
-
-        /* Image styles */
-        .hero-image {
-            width: 100%;
-            height: auto;
         }
 
         /* Button Styles */
@@ -109,12 +114,6 @@
 
         <button onclick="window.location.href='https://judesio.lt'">Užsisakyti masažą</button>
     </div>
-
-    <!-- Additional JS code (if any) -->
-    <script>
-        // Example of additional JS functionality, if needed
-        console.log("Page loaded successfully!");
-    </script>
 
 </body>
 </html>
