--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
         /* Image styles for desktop */
         .hero-image {
-            width: 50%; /* Fit the image to 50% of the screen */
+            width: 100%; 
             height: auto;
             object-fit: cover;
         }
