--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <!-- Top Hero Image, different for mobile and desktop -->
     <picture>
         <source srcset="images/masazas-klaipeda-2.jpg" media="(max-width: 768px)">
-        <img src="images/masazas-klaipeda-1.jpg" alt="Masažas Klaipėda" class="hero-image">
+        <img src="images/masazas-klaipeda.jpg" alt="Masažas Klaipėda" class="hero-image">
     </picture>
 
     <!-- The menu section -->
