--- a/index.html
+++ b/index.html
@@ -21,46 +21,33 @@
 
         /* Menu Styles */
         .menu {
-            background-color: #333;
-            overflow: hidden;
             display: flex;
             justify-content: center;
             padding: 10px 0;
-            flex-wrap: wrap;
+            position: absolute;
+            top: 0;
+            width: 100%;
+            z-index: 1000; /* Keep the menu on top */
         }
 
         .menu a {
-            color: white;
-            padding: 14px 20px;
+            color: black;
+            padding: 12px 25px;
             text-decoration: none;
             text-align: center;
-            flex: 1;
+            background-color: grey; /* Grey background for buttons */
+            border-radius: 30px; /* Rounded buttons */
+            margin: 0 10px;
+            transition: background-color 0.3s ease;
         }
 
         .menu a:hover {
-            background-color: #575757;
-        }
-
-        /* Responsive Design for Smaller Screens */
-        @media (max-width: 768px) {
-            .menu {
-                flex-direction: column;
-            }
-            .menu a {
-                width: 100%;
-                text-align: left;
-                padding: 12px 20px;
-                border-top: 1px solid #444;
-            }
-
-            .hero-image {
-                width: 100%;
-            }
+            background-color: #575757; /* Darker grey on hover */
         }
 
         /* Image styles for desktop */
         .hero-image {
-            width: 100%; 
+            width: 100%;
             height: auto;
             object-fit: cover;
         }
@@ -69,6 +56,7 @@
         .content {
             padding: 20px;
             text-align: center;
+            margin-top: 100px; /* Give space to the image and menu */
         }
 
         .content h1 {
@@ -83,6 +71,7 @@
             border: none;
             cursor: pointer;
             font-size: 16px;
+            border-radius: 30px; /* Rounded button */
         }
 
         button:hover {
@@ -93,7 +82,7 @@
 </head>
 <body>
 
-    <!-- Top Hero Image, different for mobile and desktop -->
+    <!-- Top Hero Image -->
     <picture>
         <source srcset="images/masazas-klaipeda-2.jpg" media="(max-width: 768px)">
         <img src="images/masazas-klaipeda.jpg" alt="Masažas Klaipėda" class="hero-image">
